# secure-exec

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  README.md  ROADMAP.md  SPEC.md  SPEC_2.md  TEST_WASM_JS_BRIDGE.md  justfile  package.json  pnpm-lock.yaml  posix-conformance-report.json  prd.json  progress.txt  turbo.json  wasix_runtime_child_process_spec.md  wasmer_bug_report.md  wasmer_host_exec_research.md  wasmer_ressearch.md  wasmer_vfs_api.md
.agent/contracts/: kernel.md  node-bridge.md  node-runtime.md  node-stdlib.md
.codex/skills/: git-sync
.github/workflows/: ci.yml  pkg-pr-new.yaml  pkg-pr-new.yml  posix-conformance.yml  (+1 more)
docs/: FUTURE_WORK.md  OTHER_TECHNOLOGIES.md  api-reference.mdx  architecture.mdx  cost-evaluation.mdx  docs.json  goals.md  node-compatability.mdx  nodejs-compatibility.mdx  nodejs-conformance-report.mdx  posix-compatibility.md  posix-conformance-report.mdx  process-isolation.mdx  quickstart.mdx  sdk-overview.mdx  security-model.mdx  security.md
docs-internal/: glossary.md  todo.md
native/v8-runtime/: Cargo.toml
native/v8-runtime/npm/darwin-arm64/: package.json
native/v8-runtime/npm/darwin-x64/: package.json
native/v8-runtime/npm/linux-arm64-gnu/: package.json
native/v8-runtime/npm/linux-x64-gnu/: package.json
native/v8-runtime/npm/win32-x64/: package.json
native/v8-runtime/src/: bridge.rs  execution.rs  host_call.rs  main.rs  session.rs  stream.rs
scripts/: generate-posix-report.ts  import-os-test.ts  posix-exclusion-schema.ts  release.ts  validate-posix-exclusions.ts
wasmer-test/: test11-wasix-syscall-intercept.ts
(+140 files in other folders)
